# canvas-companion

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
src/canvas_companion/: __init__.py  __main__.py  calendar_service.py  canvas_api.py  cli.py  config.py  db.py  drive_sync.py  gemini_service.py  models.py  nus_calendar.py  pdf_extract.py  prep_agent.py  prep_handler.py  scheduler.py  sync_engine.py  telegram_bot.py  telegram_notifier.py
tests/: conftest.py  test_bot_commands.py  test_calendar_service.py  test_canvas_api.py  test_cli.py  test_config.py  test_db.py  test_db_fts.py  test_db_preferences.py  test_drive_sync.py  test_gemini_service.py  test_nus_calendar.py  test_pdf_extract.py  test_prep_agent.py  test_prep_handler.py  test_sync_engine.py  test_telegram_notifier.py
tests/fixtures/canvas/: announcements.json  assignments.json  courses.json  files.json
